Cleans up documentation.

--- a/vars/aws.yml
+++ b/vars/aws.yml
@@ -1,7 +1,7 @@
 ---
 aws_region: us-east-1
 # name of your AWS cloudformation resources:
-stack_name: codefordurham3
+stack_name: codefordurham
 # name of your EC2 Key Pair:
 key_name: codefordurham
 # DNS zone apps will be hosted under (that you have setup in Route53):
