Adds initial tequila-common setup (WIP).
This breaks the ubuntu user, making it impossible to re-run this script.

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,5 @@
 ---
 - src: https://github.com/Oefenweb/ansible-swapfile
   name: swapfile
+- src: https://github.com/caktus/tequila-common
+  version: v0.8.0
