--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ host_key_checking = False
 inventory = ./ec2.py
 roles_path = deployment/roles/
 vault_password_file = .vault_pass.txt
+remote_user = ubuntu
