--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,9 @@
 [defaults]
 host_key_checking = False
-inventory = ./ec2.py
+inventory = ./scripts/ec2.py
 roles_path = deployment/roles/
 vault_password_file = .vault_pass.txt
 remote_user = ubuntu
+
+[ssh_connection]
+pipelining = True
