--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,5 @@
   name: swapfile
 - src: https://github.com/caktus/tequila-common
   version: v0.8.0
+- src: https://github.com/caktus/tequila-dokku
+  version: v0.2.0
