--- a/vars/aws.yml
+++ b/vars/aws.yml
@@ -5,7 +5,9 @@ stack_name: codefordurham
 # name of your EC2 Key Pair:
 key_name: codefordurham
 # DNS zone apps will be hosted under (that you have setup in Route53):
-zone: a.willowdesk.info
+zone: codefordurham.com
+dokku_host: "dokku.{{ zone }}"
+wildcard_host: "*.{{ zone }}"
 # Location of your EC2 Key Pair:
 ssh_private_key: ~/.ec2/codefordurham.pem
 # Admin users that can work with dokku, and login to the server:
